# taosgen

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING-CN.md  LICENSE  README-CN.md  README.md  ROADMAP.md  codecov.yml  conanfile.txt  user-guide-cn.md
src/: CMakeLists.txt  benchmark.cpp  version.hpp
src/actions/: CMakeLists.txt
src/actions/base/: ActionBase.hpp  ActionFactory.h  ActionFactory.hpp
src/actions/components/: CMakeLists.txt
src/actions/components/compressor/: CMakeLists.txt
src/actions/components/compressor/inc/: CompressionType.hpp  Compressor.hpp  GzipCompressor.hpp  Lz4Compressor.hpp  ZstdCompressor.hpp
src/actions/components/compressor/src/: CompressionType.cpp  Compressor.cpp  GzipCompressor.cpp  Lz4Compressor.cpp  ZstdCompressor.cpp
src/actions/components/compressor/test/: CMakeLists.txt  TestCompressor.cpp
src/actions/components/connector/: CMakeLists.txt
src/actions/components/connector/inc/: ConnectionPoolImpl.hpp  ConnectorFactory.hpp  ConnectorSource.hpp  DatabaseConnector.h  DatabaseConnector.hpp  NativeConnector.h  NativeConnector.hpp  PooledConnector.hpp  RestfulConnector.h  RestfulConnector.hpp  TDengineConnector.hpp  WebsocketConnector.h  WebsocketConnector.hpp
src/actions/components/connector/src/: ConnectionPoolImpl.cpp  ConnectorFactory.cpp  ConnectorSource.cpp  DatabaseConnector.cpp  NativeConnector.cpp  PooledConnector.cpp  RestfulConnector.cpp  TDengineConnector.cpp  WebsocketConnector.cpp
src/actions/components/connector/test/: CMakeLists.txt  DummyConnector.hpp  TestConnectionPoolImpl.cpp  TestConnectorSource.cpp  TestNativeConnector.cpp  TestPooledConnector.cpp  TestTDengineConnector.cpp  TestWebsocketConnector.cpp
src/actions/components/encoding/: CMakeLists.txt
src/actions/components/encoding/inc/: EncodingConverter.hpp  EncodingType.hpp
src/actions/components/encoding/src/: EncodingConverter.cpp  EncodingType.cpp
src/actions/components/encoding/test/: CMakeLists.txt  TestEncodingConverter.cpp
src/actions/components/expression/: CMakeLists.txt
src/actions/components/expression/inc/: ExpressionEngine.hpp  FunctionRegistry.hpp  ILuaFunction.hpp  MathFunctions.hpp  NetworkFunctions.hpp  RegistryFunctions.hpp
src/actions/components/expression/src/: ExpressionEngine.cpp  MathFunctions.cpp  NetworkFunctions.cpp
src/actions/components/expression/test/: CMakeLists.txt  TestExpressionEngine.cpp  TestMathFunctions.cpp  (+1 more)
src/actions/components/formatter/: CMakeLists.txt
src/actions/components/garbage_collector/: CMakeLists.txt
src/actions/components/generator/: CMakeLists.txt
src/actions/components/memory_pool/: CMakeLists.txt
src/actions/components/metrics/: CMakeLists.txt
src/actions/components/reader/: CMakeLists.txt
src/actions/config/: CMakeLists.txt
src/actions/config/inc/: ActionConfigVariant.hpp  ActionRegisterInfo.hpp  CheckpointActionConfig.hpp  CheckpointData.hpp  CheckpointInfo.hpp  ChildTableInfo.h  ChildTableInfo.hpp  ColumnConfig.h  ColumnConfig.hpp  ColumnConfigInstance.h  ColumnConfigInstance.hpp  ColumnType.h  ColumnType.hpp  ColumnsCSV.hpp  ColumnsConfig.h  ColumnsConfig.hpp  ConnectionInfo.hpp  CreateChildTableConfig.h  CreateChildTableConfig.hpp  CreateDatabaseConfig.h  CreateDatabaseConfig.hpp  CreateSuperTableConfig.h  CreateSuperTableConfig.hpp  DataChannel.h  DataFormat.h  DataFormat.hpp  DatabaseInfo.h  FromCSVConfig.hpp  GenerationConfig.hpp  GlobalConfig.h  GlobalConfig.hpp  ISinkConfig.hpp  ISinkContext.hpp  InsertDataConfig.h  InsertDataConfig.hpp  KafkaConfig.hpp  MqttConfig.hpp  MqttInfo.hpp  PluginConfigRegistrar.hpp  PluginConfigRegistry.hpp  (+22 more)
src/actions/config/src/: ColumnConfig.cpp  ColumnType.cpp  ConnectionInfo.cpp  PluginConfigRegistrar.cpp  PluginConfigRegistry.cpp  TDengineConfig.cpp  TDengineInfo.cpp  TypeConverter.cpp
src/actions/config/test/: CMakeLists.txt  TestColumnConfig.cpp  TestColumnConfigInstance.cpp  TestColumnType.cpp  TestConnectionInfo.cpp  TestTDengineConfig.cpp  TestTDengineInfo.cpp  TestTypeConverter.cpp
src/actions/core/: CMakeLists.txt
src/actions/core/checkpoint/: CMakeLists.txt
src/actions/core/create/: CMakeLists.txt
src/actions/core/insert/: CMakeLists.txt
src/actions/core/query/: CMakeLists.txt
src/actions/core/subscribe/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/inc/: JobDAG.h  JobDAG.hpp  JobScheduler.h  JobScheduler.hpp  StepExecutionStrategy.h  StepExecutionStrategy.hpp  ThreadSafeQueue.h  ThreadSafeQueue.hpp
src/engine/src/: JobDAG.cpp  JobScheduler.cpp  StepExecutionStrategy.cpp  ThreadSafeQueue.cpp
src/engine/test/: CMakeLists.txt  TestJobScheduler.cpp
src/parameter/: CMakeLists.txt
src/parameter/conf/: config.yaml  csv-config.yaml  ctb-data.csv  ctb-tags.csv  debug-config.yaml  expr-config.yaml  literal-config.yaml
src/parameter/inc/: ConfigParser.h  ConfigParser.hpp  ParamDescriptor.h  ParameterContext.h  ParameterContext.hpp  StepParserRegistry.hpp
src/parameter/src/: ParameterContext.cpp  ParameterValidator.cpp  StepParserRegistry.cpp  WildcardMatcher.cpp
src/parameter/test/: CMakeLists.txt  TestConfigParser.cpp  TestParameterContext.cpp  TestParseYAML.cpp
src/plugins/: CMakeLists.txt
src/plugins/inc/: PluginRegistrar.hpp
src/plugins/src/: PluginRegistrar.cpp
src/plugins/src/kafka/: CMakeLists.txt
src/plugins/src/mqtt/: CMakeLists.txt
src/plugins/src/tdengine/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/inc/: Barrier.hpp  Latch.hpp  LogUtils.hpp  ProcessUtils.h  ProcessUtils.hpp  ScopedEnvVar.hpp  SignalManager.hpp  StringUtils.hpp  TimestampUtils.hpp  blockingconcurrentqueue.hpp  concurrentqueue.hpp
src/utils/src/: Barrier.cpp  Latch.cpp  LogUtils.cpp  ProcessUtils.cpp  ScopedEnvVar.cpp  SignalManager.cpp  StringUtils.cpp  TimestampUtils.cpp
src/utils/test/: CMakeLists.txt  TestBarrier.cpp  TestConcurrentQueue.cpp  TestLatch.cpp  TestLogUtils.cpp  TestProcessUtils.cpp  TestScopedEnvVar.cpp  TestSignalManager.cpp  TestTimestampUtils.cpp
src/workflow/: CMakeLists.txt
src/workflow/inc/: ConfigData.h  ConfigData.hpp  Job.h  Job.hpp  Step.h  Step.hpp
(+333 files in other folders)
